force-app/main/default/objects/Project__c/fields/Active_Financial_Quote__c.field-meta.xml
<CustomField>
    <fullName>Active_Financial_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Financial Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>