force-app/main/default/objects/Project__c/fields/Actual_Expensed_Costs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expensed_Costs__c</fullName>
    <formula>(Total_Labour_JE_Debit__c - Total_Labour_JE_Credit__c)+(Total_Other_JE_Debit__c-Total_Other_JE_Credit__c)+ Opportunity__r.Inventory_Cost_total__c +  Opportunity__r.PO_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Expensed Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>