force-app/main/default/objects/Project__c/fields/ActualCostsIncurred__c.field-meta.xml
<CustomField>
    <fullName>ActualCostsIncurred__c</fullName>
    <label>Actual Costs Incurred</label>
    <summarizedField>Cost_Posting__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Cost_Posting__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>