force-app/main/default/objects/Project__c/fields/Amount_Underbilled__c.field-meta.xml
<CustomField>
    <fullName>Amount_Underbilled__c</fullName>
    <formula>IF((Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c)&lt;&gt;0 || Actual_Expensed_Costs__c&lt;&gt;0,IF( (Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c&gt;Actual_Expensed_Costs__c) ,((Actual_Expensed_Costs__c -  Cost_To_Be_Expensed__c)/ (Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c))*Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c,((Actual_Expensed_Costs__c -  Cost_To_Be_Expensed__c)/ Actual_Expensed_Costs__c)*Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Underbilled / &lt;Overbilled&gt;</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>