force-app/main/default/objects/Project__c/fields/Attached_All_Backup_Info_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_All_Backup_Info_Notes__c</fullName>
    <description>Attached All Backup Info for Special Req?</description>
    <label>Attached All Backup Info Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>