force-app/main/default/objects/Project__c/fields/Attached_All_Design_and_Selection_Docs__c.field-meta.xml
<CustomField>
    <fullName>Attached_All_Design_and_Selection_Docs__c</fullName>
    <description>Attached All Design and Selection Docs?</description>
    <label>Attached All Design and Selection Docs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>