force-app/main/default/objects/Project__c/fields/Attached_All_Design_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_All_Design_Notes__c</fullName>
    <description>Attached All Design and Selection Docs?</description>
    <label>Attached All Design Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>