force-app/main/default/objects/Project__c/fields/Attached_all_Email_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_all_Email_Notes__c</fullName>
    <description>Attached all Email Correspondence?</description>
    <label>Attached all Email Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>