force-app/main/default/objects/Project__c/fields/Attached_Any_Field_Purchased_Items_Quote__c.field-meta.xml
<CustomField>
    <fullName>Attached_Any_Field_Purchased_Items_Quote__c</fullName>
    <description>Attached Any Field Purchased Items/Quotes?</description>
    <label>Attached Any Field Purchased Items/Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>