force-app/main/default/objects/Project__c/fields/Attached_Any_Field_Purchased_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_Any_Field_Purchased_Notes__c</fullName>
    <description>Attached Any Field Purchased Items/Quotes?</description>
    <label>Attached Any Field Purchased Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>