force-app/main/default/objects/Project__c/fields/Attached_Commission_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Attached_Commission_Worksheet__c</fullName>
    <description>Attached Commission Worksheet?</description>
    <label>Attached Commission Worksheet?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>