force-app/main/default/objects/Project__c/fields/Attached_Commission_Worksheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_Commission_Worksheet_Notes__c</fullName>
    <description>Attached Commission Worksheet?</description>
    <label>Attached Commission Worksheet Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>