force-app/main/default/objects/Project__c/fields/Attached_Final_Scope_Letter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_Final_Scope_Letter_Notes__c</fullName>
    <description>Attached Final Scope Letter?</description>
    <label>Attached Final Scope Letter Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>