force-app/main/default/objects/Project__c/fields/Attached_Pricing_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attached_Pricing_Approval_Notes__c</fullName>
    <description>Attached Pricing Approval Docs?</description>
    <label>Attached Pricing Approval Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>