force-app/main/default/objects/Project__c/fields/Billings__c.field-meta.xml
<CustomField>
    <fullName>Billings__c</fullName>
    <formula>Opportunity__r.Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>