force-app/main/default/objects/Project__c/fields/BR_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>BR_Invoiced__c</fullName>
    <formula>if((  Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c)!=0,Opportunity__r.B_R_BillingLine_Total__c /  Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BR % INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>