force-app/main/default/objects/Project__c/fields/Commision_Invoiced_perc__c.field-meta.xml
<CustomField>
    <fullName>Commision_Invoiced_perc__c</fullName>
    <formula>if( (Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c != 0),
(( Opportunity__r.C_R_BillingLine_Total__c / (Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c ))),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COMMISSION % INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>