force-app/main/default/objects/Project__c/fields/CommisionCustomer__c.field-meta.xml
<CustomField>
    <fullName>CommisionCustomer__c</fullName>
    <label>Commision Customer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>