force-app/main/default/objects/Project__c/fields/CommissionsAndRebates__c.field-meta.xml
<CustomField>
    <fullName>CommissionsAndRebates__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions and Rebates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>