force-app/main/default/objects/Project__c/fields/Cost_To_Be_Expensed__c.field-meta.xml
<CustomField>
    <fullName>Cost_To_Be_Expensed__c</fullName>
    <formula>if((Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c)&gt;=Actual_Expensed_Costs__c,(Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c)*BR_Invoiced__c,Actual_Expensed_Costs__c*BR_Invoiced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost To Be Expensed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>