force-app/main/default/objects/Project__c/fields/Customer_PO_In_Hand__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_In_Hand__c</fullName>
    <label>Customer PO In Hand?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>