force-app/main/default/objects/Project__c/fields/Customer_PO_In_Hand_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_In_Hand_Notes__c</fullName>
    <description>Customer PO In Hand?</description>
    <label>Customer PO In Hand Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>