force-app/main/default/objects/Project__c/fields/DateofMostRecentBilling__c.field-meta.xml
<CustomField>
    <fullName>DateofMostRecentBilling__c</fullName>
    <formula>Opportunity__r.MostRecentBillingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Most Recent Billing</label>
    <type>Date</type>
</CustomField>