force-app/main/default/objects/Project__c/fields/Deffered__c.field-meta.xml
<CustomField>
    <fullName>Deffered__c</fullName>
    <label>Deffered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>