force-app/main/default/objects/Project__c/fields/Do_you_have_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_PO_Number__c</fullName>
    <label>Do you have PO Number?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>