force-app/main/default/objects/Project__c/fields/Does_Customer_PO_Reflect_Negotiated_Scop__c.field-meta.xml
<CustomField>
    <fullName>Does_Customer_PO_Reflect_Negotiated_Scop__c</fullName>
    <description>Does Customer PO Reflect Negotiated Scope?</description>
    <label>Does Customer PO Reflect Negotiated Scop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>