force-app/main/default/objects/Project__c/fields/Does_Price_Reflect_Equipement_Want_Date__c.field-meta.xml
<CustomField>
    <fullName>Does_Price_Reflect_Equipement_Want_Date__c</fullName>
    <description>Does Price Reflect Equipement Want Date?</description>
    <label>Does Price Reflect Equipement Want Date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>