force-app/main/default/objects/Project__c/fields/Does_Price_Reflect_Equipment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Does_Price_Reflect_Equipment_Notes__c</fullName>
    <description>Does Price Reflect Equipment Want Date?</description>
    <label>Does Price Reflect Equipment Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>