force-app/main/default/objects/Project__c/fields/dummy_field__c.field-meta.xml
<CustomField>
    <fullName>dummy_field__c</fullName>
    <label>dummy field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>