force-app/main/default/objects/Project__c/fields/Existing_Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Notes__c</fullName>
    <description>Existing Customer - has accounting review credit status?</description>
    <label>Existing Customer Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>