force-app/main/default/objects/Project__c/fields/Expense_To_Accrue__c.field-meta.xml
<CustomField>
    <fullName>Expense_To_Accrue__c</fullName>
    <formula>IF( Deffered__c!=null &amp;&amp; Amount_Underbilled__c != null &amp;&amp; (Deffered__c  =-Amount_Underbilled__c) , 0,  IF(( Cost_To_Be_Expensed__c -  Actual_Expensed_Costs__c )&gt;0, ( Cost_To_Be_Expensed__c -  Actual_Expensed_Costs__c ),0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense To Accrue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>