force-app/main/default/objects/Project__c/fields/Final_Review_Before_Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Before_Release_Notes__c</fullName>
    <description>Final Review Before Release?</description>
    <label>Final Review Before Release Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>