force-app/main/default/objects/Project__c/fields/Hide_Act_Ship__c.field-meta.xml
<CustomField>
    <fullName>Hide_Act_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Act. Ship</label>
    <type>Checkbox</type>
</CustomField>