force-app/main/default/objects/Project__c/fields/Hide_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Hide_Billing_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Billing Status</label>
    <type>Checkbox</type>
</CustomField>