force-app/main/default/objects/Project__c/fields/Hide_Date_of_Billing__c.field-meta.xml
<CustomField>
    <fullName>Hide_Date_of_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Date of Billing</label>
    <type>Checkbox</type>
</CustomField>