force-app/main/default/objects/Project__c/fields/Hide_IOM_Done__c.field-meta.xml
<CustomField>
    <fullName>Hide_IOM_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide IOM Done</label>
    <type>Checkbox</type>
</CustomField>