force-app/main/default/objects/Project__c/fields/Hide_Note__c.field-meta.xml
<CustomField>
    <fullName>Hide_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Note</label>
    <type>Checkbox</type>
</CustomField>