force-app/main/default/objects/Project__c/fields/Hide_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Hide_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Payment Received</label>
    <type>Checkbox</type>
</CustomField>