force-app/main/default/objects/Project__c/fields/Hide_Release__c.field-meta.xml
<CustomField>
    <fullName>Hide_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Release #</label>
    <type>Checkbox</type>
</CustomField>