force-app/main/default/objects/Project__c/fields/Hide_Released_to_Mfgr__c.field-meta.xml
<CustomField>
    <fullName>Hide_Released_to_Mfgr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Released to Mfgr</label>
    <type>Checkbox</type>
</CustomField>