force-app/main/default/objects/Project__c/fields/Hide_Tag__c.field-meta.xml
<CustomField>
    <fullName>Hide_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Tag</label>
    <type>Checkbox</type>
</CustomField>