force-app/main/default/objects/Project__c/fields/Identified_and_Attached_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Identified_and_Attached_Service_Notes__c</fullName>
    <description>Identified and Attached Service Items/Quotes?</description>
    <label>Identified and Attached Service Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>