force-app/main/default/objects/Project__c/fields/Invoiced_percent__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_percent__c</fullName>
    <formula>If((Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c + Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c)!=0,(( Invoiced_dollar__c) /(Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c + Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INVOICED %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>