force-app/main/default/objects/Project__c/fields/Is_Electronic_File_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Is_Electronic_File_Cleaned__c</fullName>
    <description>Is Electronic File Cleaned?</description>
    <label>Is Electronic File Cleaned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>