force-app/main/default/objects/Project__c/fields/Is_Electronic_File_Notes__c.field-meta.xml
<CustomField>
    <fullName>Is_Electronic_File_Notes__c</fullName>
    <description>Is Electronic File Cleaned?</description>
    <label>Is Electronic File Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>