force-app/main/default/objects/Project__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <formula>Opportunity__r.Ledger__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger</label>
    <type>Text</type>
</CustomField>