force-app/main/default/objects/Project__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c + Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>