force-app/main/default/objects/Project__c/fields/Margin_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Margin_Adjusted__c</fullName>
    <description>Margin Adjusted?</description>
    <label>Margin Adjusted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>