force-app/main/default/objects/Project__c/fields/marginCommissionRebate__c.field-meta.xml
<CustomField>
    <fullName>marginCommissionRebate__c</fullName>
    <formula>Opportunity__r.Sync_Quote__r.Commissions_and_Rebates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>marginCommissionRebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>