force-app/main/default/objects/Project__c/fields/MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>MarginPercentage__c</fullName>
    <formula>IF( AND( OR(Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c &gt; 0,Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c &gt; 0) , TotalRevenue__c &gt; 0) , 
    ( Opportunity__r.Active_Financial_Quote__r.Commissions_and_Rebates__c + Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c )  /   (
TotalRevenue__c  ), 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>