force-app/main/default/objects/Project__c/fields/Move_Expenses_To_Wip__c.field-meta.xml
<CustomField>
    <fullName>Move_Expenses_To_Wip__c</fullName>
    <formula>if(Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c&lt;&gt;0 &amp;&amp; Amount_Underbilled__c&gt;0,(Amount_Underbilled__c/Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c)*if((Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c)&gt;=Actual_Expensed_Costs__c,Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c - Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c,Actual_Expensed_Costs__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move Expenses To Wip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>