force-app/main/default/objects/Project__c/fields/O_M_s_Sent__c.field-meta.xml
<CustomField>
    <fullName>O_M_s_Sent__c</fullName>
    <description>O&amp;M&apos;s Sent?</description>
    <label>O&amp;M&apos;s Sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>