force-app/main/default/objects/Project__c/fields/O_M_s_Sent_Notes__c.field-meta.xml
<CustomField>
    <fullName>O_M_s_Sent_Notes__c</fullName>
    <description>O&amp;M&apos;s Sent?</description>
    <label>O&amp;M&apos;s Sent Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>