force-app/main/default/objects/Project__c/fields/Opportunity_Office__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Office__c</fullName>
    <formula>Text(Opportunity__r.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Office</label>
    <type>Text</type>
</CustomField>