force-app/main/default/objects/Project__c/fields/Pay_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Pay_Cycle__c</fullName>
    <label>Pay Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>