force-app/main/default/objects/Project__c/fields/Payment_Terms_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Reason__c</fullName>
    <inlineHelpText>Please answer why you&apos;re moving forward without reviewing payment terms.</inlineHelpText>
    <label>Payment Terms Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>