force-app/main/default/objects/Project__c/fields/Payment_Terms_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have the project manager and sales engineer reviewed the customer&apos;s payment terms on this sale and found them acceptable?</inlineHelpText>
    <label>Payment Terms Reviewed</label>
    <type>Checkbox</type>
</CustomField>