force-app/main/default/objects/Project__c/fields/PaymentsReceivedFromCustomer__c.field-meta.xml
<CustomField>
    <fullName>PaymentsReceivedFromCustomer__c</fullName>
    <formula>Opportunity__r.Payments_Received_From_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Received From Customer</label>
    <type>Date</type>
</CustomField>