force-app/main/default/objects/Project__c/fields/PO_Number_Reason__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Reason__c</fullName>
    <label>PO Number Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>