force-app/main/default/objects/Project__c/fields/Project_Legacy_Tool__c.field-meta.xml
<CustomField>
    <fullName>Project_Legacy_Tool__c</fullName>
    <formula>HYPERLINK(&apos;/apex/projectdetails?id=&apos;+ Id , &apos;Open Legacy Project&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project (Legacy Tool)</label>
    <type>Text</type>
</CustomField>