force-app/main/default/objects/Project__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>PM Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pre-submittals</fullName>
            </value>
            <value>
                <fullName>All submittals sent – awaiting approval(s)</fullName>
            </value>
            <value>
                <fullName>Submittals approved</fullName>
            </value>
            <value>
                <fullName>Equipment Partially Released</fullName>
            </value>
            <value>
                <fullName>Released all equipment</fullName>
            </value>
            <value>
                <fullName>Partially shipped</fullName>
            </value>
            <value>
                <fullName>Fully shipped</fullName>
            </value>
            <value>
                <fullName>Startup and owner training</fullName>
            </value>
            <value>
                <fullName>Partially invoiced</fullName>
            </value>
            <value>
                <fullName>Fully invoiced</fullName>
            </value>
            <value>
                <fullName>Partially paid</fullName>
            </value>
            <value>
                <fullName>All paid</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>All Submitted Waiting for Approval</fullName>
                <isActive>false</isActive>
                <label>All Submitted Waiting for Approval</label>
            </value>
            <value>
                <fullName>Received Customer PO</fullName>
                <isActive>false</isActive>
                <label>Received Customer PO</label>
            </value>
            <value>
                <fullName>Shipped and Invoiced All</fullName>
                <isActive>false</isActive>
                <label>Shipped and Invoiced All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>