force-app/main/default/objects/Project__c/fields/ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ProjectManager__c</fullName>
    <formula>Opportunity__r.Project_Manager__r.FirstName +&quot; &quot;+ Opportunity__r.Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>