force-app/main/default/objects/Project__c/fields/ProjectShipDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectShipDate__c</fullName>
    <description>Enter your best guess when we will send out the last invoice or shipment on this project.</description>
    <inlineHelpText>Enter your best guess when we will send out the last invoice or shipment on this project.</inlineHelpText>
    <label>Est. Last Ship or Invoice Date</label>
    <type>Date</type>
</CustomField>